--- a/src/app/compoents/song-card/song-card.component.html
+++ b/src/app/compoents/song-card/song-card.component.html
@@ -1,1 +1,13 @@
-<p>song-card works!</p>
+
+<div class="contain mt-3 mb-5 p-4 contain-fluid">
+    <!-- trending movies  -->
+    <div class="row">
+        <h5 class="text-white">Trending Movies</h5>
+        <div class="rowposter mt-3 p-2">
+            <ng-container>
+                <img 
+                src="../../../assets/download.png" class="rowimg largeposter" alt="...">
+            </ng-container>
+        </div>
+    </div>
+</div>  
