--- a/src/app/compoents/carousl/carousl.component.html
+++ b/src/app/compoents/carousl/carousl.component.html
@@ -1,8 +1,9 @@
 <div class="contain-fluid">
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" 
+    data-bs-ride="carousel" *ngFor="let l of songList">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../../assets/download.png" class="d-block w-100" alt="...">
+                <img [src]="l.thumbnail" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h2>{{b.original_title}}</h2>
                     <p>{{b.overview}}</p> -->
