--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<app-carousl></app-carousl>
-<app-song-card style="margin:auto;"></app-song-card>
+<app-carousl [songList]="songsList"></app-carousl>
+<app-song-card  style="margin:auto;"></app-song-card>
 
