--- a/src/app/compoents/top-nav/top-nav.component.html
+++ b/src/app/compoents/top-nav/top-nav.component.html
@@ -19,11 +19,11 @@
             <input class="form-control mr-sm-2" style="margin-left:200px;margin-top:10px;" type="search" placeholder="Search" aria-label="Search">
                 </form>
             </li>
-            <li  class="nav-item" style="margin-left: 600px;">
-                <div>
-                    <a class="login" style="padding: 10px 10px 10px 10px " routerLink="/">Login</a>
-                    <a class="signup" style="padding: 10px 10px 10px 10px" routerLink="/signup">SignUp</a>
-                </div>
+            <li  class="nav-item" style="margin-left:500px" >
+                <a class="login" style="display: inline-block;" routerLink="/">Login</a>
+            </li>
+            <li class="nav-item"> 
+                <a class="signup" routerLink="/signup" style="display: inline-block;">SignUp</a>
             </li>
             
         </ul>
