--- a/src/app/compoents/song-card/song-card.component.html
+++ b/src/app/compoents/song-card/song-card.component.html
@@ -1,13 +1,36 @@
-
-<div class="contain mt-3 mb-5 p-4 contain-fluid">
-    <!-- trending movies  -->
-    <div class="row">
-        <h5 class="text-white">Trending Movies</h5>
-        <div class="rowposter mt-3 p-2">
-            <ng-container>
-                <img 
-                src="../../../assets/download.png" class="rowimg largeposter" alt="...">
-            </ng-container>
+<div class="container-fluid">
+    <div class="contain mt-3 mb-5 p-4">
+        <!-- trending movies  -->
+        <div class="row">
+            <h5 class="text-white">Trending Movies</h5>
+            <div class="rowposter mt-3 p-2" style="box-shadow: inset">
+                <!-- <div *ngFor="let s of songListCard" 
+                style="display:inline-block;border:green 2px solid;margin: 20px 20px 20px 20px;max-width: 200px;">
+                    <h5 style="color:white">{{s?.title}}</h5>
+                    <img style="height:100px;width:100px;"  [src]="s?.thumbnail" 
+                     alt="...">
+                </div> -->
+               
+                <mat-card class="example-card" *ngFor="let s of songListCard" style="display:inline-block;">
+                    <mat-card-header>
+                        <div mat-card-avatar 
+                        [ngClass]="s?.thumbnail?'example-header-image-test':'example-header-image'"></div>
+                        <mat-card-title style="color: white;">{{s?.title}}</mat-card-title>
+                    </mat-card-header>
+                    <img mat-card-image 
+                    style="height:100px;width:100px;margin:20px 20px 20px 20px;margin-left:100px;"
+                     [src]="s?.thumbnail" alt="Photo of a Shiba Inu">
+                    <mat-card-content>
+                        <p style="color: white;">{{s?.description.substring(0, 50)}}</p>
+                        <mat-card-actions style="color: white;">
+                            <button mat-button>LIKE</button>
+                            <button mat-button>SHARE</button>
+                        </mat-card-actions>
+                    </mat-card-content>
+                    
+                </mat-card>
+              
+            </div>
         </div>
     </div>
-</div>  
+</div>
