--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,2 +1,38 @@
-<p>login works!</p>
-<button class="btn btn-danger">Login</button>
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+  <mat-card class="shipping-card">
+    <mat-card-header>
+      <mat-card-title style="color: white;">Login Information</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="row">
+        <div class="col">
+          <mat-form-field class="full-width">
+            <input matInput placeholder="userName" formControlName="userName">
+            @if (addressForm.controls['userName'].hasError('required')) {
+            <mat-error>User name is <strong>required</strong></mat-error>
+            }
+          </mat-form-field>
+        </div>
+       
+      </div>
+
+      <div class="row"> 
+        <div class="col">
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="email" formControlName="email">
+                  @if (addressForm.controls['email'].hasError('required')) {
+                  <mat-error>Password is <strong>required</strong></mat-error>
+                  }
+                </mat-form-field>
+              </div>
+      </div>
+      
+    </mat-card-content>
+    <mat-card-actions>
+      <button [hidden]="!this.addressForm.valid" 
+      mat-raised-button 
+      style="color:white;border: 2px green solid;margin:50px 50px 50px 50px;background-color: green;border-radius: 50px;" 
+      type="submit">Submit</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
