--- a/src/app/compoents/top-nav/top-nav.component.html
+++ b/src/app/compoents/top-nav/top-nav.component.html
@@ -9,14 +9,16 @@
                 <a class="nav-link" style="color:aliceblue" routerLink="/dashboard" href="#">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color:aliceblue" routerLink="/search" href="#">Search</a>
+                <a class="nav-link" style="color:aliceblue" routerLink="/search" (click)="onNavigationSearch()" href="#">Search</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="color:aliceblue" routerLink="/pricing">Pricing</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="isSearchFieldVisible">
                 <form class="form-inline">
-            <input class="form-control mr-sm-2" style="margin-left:200px;margin-top:10px;" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" 
+            [value]="search" style="margin-left:200px;margin-top:10px;" 
+            type="search" placeholder="Search" aria-label="Search">
                 </form>
             </li>
             <li  class="nav-item" style="margin-left:500px" >
