--- a/src/app/compoents/top-nav/top-nav.component.html
+++ b/src/app/compoents/top-nav/top-nav.component.html
@@ -21,7 +21,7 @@
             style="margin-left:200px;margin-top:10px;" 
             type="search" placeholder="Search" aria-label="Search" 
                formControlName="songName" placeholder="Serch Movie Here ..."
-                name="movieName">>
+                name="songName">
                 </form>
             </li>
             <li  class="nav-item" style="margin-left:500px" >
