--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,15 +1,20 @@
-<p *ngIf="selectedSong" style="background-color:yellow;">{{selectedSong|json}}</p>
-<mat-card class="example-card">
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title style="color: white;">{{selectedSong.title}}</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image [src]="selectedSong?.description" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-        <p>{{selectedSong.description}}</p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-    </mat-card-actions>
-</mat-card>
+
+    <mat-card class="example-card" style="display:inline-block;">
+        <mat-card-header>
+            <mat-card-title style="color: white;">{{selectedSong?.title}}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image style="height:100px;width:100px;margin:20px 20px 20px 20px;margin-left:100px;"
+            [src]="['../../../assets/Untitled.jpeg']" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+            <p style="color: white;">{{selectedSong?.description}}</p>
+            <audio controls style="margin-left: 5px;margin-right: 5px;">
+                <source [src]="['../../../assets/Linkin_Park_-_Numb_.mp3']" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <mat-card-actions style="color: white;">
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+            </mat-card-actions>
+        </mat-card-content>
+    
+    </mat-card>
