having bug in playing

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -8,7 +8,7 @@
         <mat-card-content>
             <p style="color: white;">{{selectedSong?.description}}</p>
             <audio controls style="margin-left: 5px;margin-right: 5px;">
-                <source [src]="['../../../assets/Linkin_Park_-_Numb_.mp3']" type="audio/mpeg">
+                <source [src]="['selectedSong?.song_link']" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <mat-card-actions style="color: white;">
